--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/Maksudur20/login_page/blob/main/styles.css">
+    <link rel="stylesheet" href="https://github.com/Maksudur20/login_page/blob/main/styles.css?raw=true">
     <title>Sium's Enterprise </title>
 </head>
 <body>
