--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sium's Enterprise </title>
 </head>
 <body>
-    <section>
+    <section> <img src="https://github.com/Maksudur20/login_page/blob/main/img/sky.jpg?raw=true" alt="">
     <div class = login-box>
         <form action="">
             <h2>Login</h2>
